commit ff2d2f00d33d053501bb4272a18c70c03a187a9a
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 14:33:31 2010 +0900

    aufs: cosmetic clean-up for rdu.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit d53ad817c894a6f2cb9df18f03d0a39de09471c4
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 14:08:58 2010 +0900

    aufs: cosmetic clean-up for export.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit b3010c40ace1227389cc0cd056f81a8fab7e00d1
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 14:00:07 2010 +0900

    aufs: cosmetic clean-up for hinotify.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit de2f58458f244208048b282a795353975ce2b9f0
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 13:48:56 2010 +0900

    aufs: cosmetic clean-up for sysfs.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 48cde7d5fdb6b78f50ba09d8386eeca05231bdd9
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Feb 24 13:44:21 2010 +0900

    aufs: cosmetic clean-up for i_op_ren.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit c76d24a2a70121f47678c5d79d0361a5590c5205
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Feb 22 23:00:08 2010 +0900

    aufs: cosmetic clean-up for i_op_del.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 8a25f7e7f34ca81f2696e1a57f8b6de6bee2c9ad
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Feb 11 02:19:10 2010 +0900

    aufs: cosmetic clean-up for i_op_add.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 9df9bb8426d1ad249e41f9918b84a6cd1406508e
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Fri Feb 5 23:08:57 2010 +0900

    aufs: cosmetic clean-up for i_op.c
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit edc355ecd8b988cbe13b7fdf7310096ed10c2f5f
Author: J. R. Okajima <hooanon05@yahoo.co.jp>